# sugar

src/jarabe/desktop/: meshbox.py
src/jarabe/frame/: activitiestray.py
src/jarabe/journal/: Makefile.am  journalactivity.py  journaltoolbox.py  misc.py  projectview.py
src/jarabe/model/: buddy.py  invites.py  neighborhood.py
src/jarabe/view/: Makefile.am  buddymenu.py  viewhelp_webkit2.py
