sugardir = $(pythondir)/jarabe/view
sugar_PYTHON =				\
	__init__.py			\
	alerts.py			\
	buddyicon.py			\
	buddymenu.py			\
	cursortracker.py		\
	customizebundle.py		\
	friendlistview.py		\
	friendlistpopup.py		\
	friendlistmodel.py		\
	gesturehandler.py		\
	keyhandler.py			\
	launcher.py			\
	palettes.py			\
	pulsingicon.py			\
	service.py			\
	tabbinghandler.py		\
	viewsource.py			\
	viewhelp.py
